--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
         -ms-user-select: text !important;
         user-select: text !important;
       }
+      
+      /* Re-enable selection for log boxes */
+      .log-console,
+      .log-console * {
+        -webkit-user-select: text !important;
+        -moz-user-select: text !important;
+        -ms-user-select: text !important;
+        user-select: text !important;
+      }
     </style>
   </head>
   <body>
