--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
       
       /* Re-enable selection for log boxes */
       .log-console,
-      .log-console * {
+      .log-console *,
+      .log-console *::before,
+      .log-console *::after {
         -webkit-user-select: text !important;
         -moz-user-select: text !important;
         -ms-user-select: text !important;
         user-select: text !important;
+        -webkit-touch-callout: default !important;
       }
     </style>
   </head>
