feat: add deep link app installation and global toast system
- Add deep link support (reachymini://install/<app-name>)
  - Tauri plugin integration (tauri-plugin-deep-link)
  - useDeepLink hook with detailed busy state messages
  - Pending install mechanism via Zustand store

- Implement global toast notification system
  - Single Toast instance in App.jsx (no more duplicates)
  - Toast state in uiSlice (Zustand)
  - Updated useToast hook to use global store
  - Removed local Toast components from ActiveRobotView,
    FirstTimeWifiSetupView, SettingsOverlay

- Improve error handling for deep link installs
  - Specific messages for each busy state (sleeping, installing, etc.)
  - Network error detection before fetching app list
  - Better offline handling

- Minor UI improvements
  - Wider permission cards in PermissionsRequiredView

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      // Filter out Tauri callback warnings that are harmless race conditions
+      // This happens when React unmounts components while Tauri async operations are pending
+      const originalWarn = console.warn;
+      console.warn = function(...args) {
+        const message = args[0];
+        if (typeof message === 'string' && message.includes("Couldn't find callback id")) {
+          return; // Suppress this specific warning
+        }
+        originalWarn.apply(console, args);
+      };
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
